fix css z-index bug

--- a/public/style.css
+++ b/public/style.css
@@ -15,7 +15,6 @@
   position: absolute;
   height: 3800px;
   top: 388px;
-  z-index: 1;
 }
 
 #azum {
